fix name overflow for long abilities
Former-commit-id: b3fb4845e1570133ae3a0744c6cda19465b1a2ac

--- a/character_sheet/first_page.less
+++ b/character_sheet/first_page.less
@@ -270,6 +270,10 @@
             // Should match length on Status page
             width: 12em;
         }
-
     }
+    // Should match length on Abilities page
+    .active-ability-button input[type="text"] {
+        width: 15em;
+    }
+
 }
